# agent_smith

./: .gitignore  DOCKER_TESTS.md  REMAINING_TESTS.md  TESTS.md  mcp_tools_mbpp.py  no_api_tests.py  pyproject.toml  test.py
exams/: exam_sandbox.sh  exam_swebench.sh
moulinette/: mbpp_task.json
serveur/: mcp_client.py  mcp_tools_mbpp.py  mcp_tools_swebench.py
src/core/: agent_mbpp.py  agent_swebench.py  code_extractor.py  console.py  final_answer_signal.py  llm_client.py  models.py  orchestrator_base.py  orchestrator_mbpp.py  orchestrator_swebench.py  prompts.py  providers.py  sandbox.py  sandbox_cli.py  sandbox_config.py  sandbox_server.py  sandbox_worker.py  solution_output.py  step_metrics.py
